# jax-triton

./: jax-triton.Dockerfile  pyproject.toml
jax_triton/: triton_lib.py
scripts/: docker_build.sh  docker_run.sh
